modified most of the "s to triple "

--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\".\")\n",
-    "sys.path.append(\"..\")\n",
-    "sys.path.append(\"../..\")"
+    "sys.path.append(\"\"\".\"\"\")\n",
+    "sys.path.append(\"\"\"..\"\"\")\n",
+    "sys.path.append(\"\"\"../..\"\"\")"
    ]
   },
   {
@@ -94,8 +94,8 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "pdf_file = \"1408.5882_page-1.pdf\"\n",
-    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", pdf_file)"
+    "pdf_file = \"\"\"1408.5882_page-1.pdf\"\"\"\n",
+    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", pdf_file)"
    ]
   },
   {
@@ -154,12 +154,12 @@
    ],
    "source": [
     "data = [\n",
-    "    {\"filename\": input_file},\n",
+    "    {\"\"\"filename\"\"\": input_file},\n",
     "]\n",
     "\n",
     "config = ExtractPDFConfig(\n",
     "    model_config=NougatModelConfig(\n",
-    "        model_name = \"0.1.0-small\",\n",
+    "        model_name = \"\"\"0.1.0-small\"\"\",\n",
     "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
     "    ),\n",
     "    splitter=PARAGRAPH_SPLITTER,\n",
@@ -220,27 +220,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last \\\n",
+    "example. Follow the format of the examples below to include context, question, and answer in the response\"\"\"\n",
+    "context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\"\n",
+    "question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\"\n",
+    "answer=\"\"\"Claude E. Shannon.\"\"\"\n",
+    "\n",
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
-    "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
+    "    instruction=instruction,\n",
     "    few_shot_prompt=[Context(\n",
-    "        context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
-    "        question=\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
-    "        answer=\"Claude E. Shannon.\"\"\"\n",
+    "        context=context,\n",
+    "        question=question,\n",
+    "        answer=answer\n",
     "    )]\n",
     ")\n",
+    "\n",
     "input_data = [\n",
-    "        Context(\n",
-    "            context=p[:1000],\n",
-    "            question=\"\",\n",
-    "            answer=\"\",\n",
-    "        )\n",
-    "        for p in contexts\n",
+    "    Context(\n",
+    "        context=p[:1000],\n",
+    "        question=\"\"\"\"\"\",\n",
+    "        answer=\"\"\"\"\"\",\n",
+    "    )\n",
+    "    for p in contexts\n",
     "]\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8f7be007",
    "metadata": {},
    "source": [
     "### Run the model\n",
@@ -258,7 +265,7 @@
     "config = TransformOpenAIConfig(\n",
     "    prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(\n",
-    "        response_format={\"type\": \"json_object\"}\n",
+    "        response_format={\"\"\"type\"\"\": \"\"\"json_object\"\"\"}\n",
     "    ),\n",
     ")\n",
     "transform_client = TransformClient(config)"
@@ -525,7 +532,7 @@
    "outputs": [],
    "source": [
     "output_df = df[['Question', 'Answer']]\n",
-    "output_df.to_csv(\"data/output/CNN_pdf_QApairs.csv\", index=False)"
+    "output_df.to_csv(\"\"\"data/output/CNN_pdf_QApairs.csv\"\"\", index=False)"
    ]
   },
   {
@@ -540,6 +547,12 @@
     "    <img src=\"../image/cambioml_logo_large.png\" style=\"height: 100px; display: block; margin-left: auto; margin-right: auto;\"/>\n",
     "</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d0ada9b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
