--- a/example/pipeline/pipeline_pdf_extract_transform.ipynb
+++ b/example/pipeline/pipeline_pdf_extract_transform.ipynb
@@ -35,9 +35,9 @@
     "import pprint\n",
     "import re\n",
     "\n",
-    "sys.path.append(\".\")\n",
-    "sys.path.append(\"..\")\n",
-    "sys.path.append(\"../..\")"
+    "sys.path.append(\"\"\".\"\"\")\n",
+    "sys.path.append(\"\"\"..\"\"\")\n",
+    "sys.path.append(\"\"\"../..\"\"\")"
    ]
   },
   {
@@ -104,11 +104,11 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "pdf_file = \"nike-paper.pdf\"\n",
-    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", pdf_file)\n",
+    "pdf_file = \"\"\"nike-paper.pdf\"\"\"\n",
+    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", pdf_file)\n",
     "\n",
     "data = [\n",
-    "    {\"pdf\": input_file},\n",
+    "    {\"\"\"pdf\"\"\": input_file},\n",
     "]"
    ]
   },
@@ -127,7 +127,7 @@
    "source": [
     "extract_config = ExtractPDFConfig(\n",
     "    model_config=NougatModelConfig(\n",
-    "        model_name = \"0.1.0-small\",\n",
+    "        model_name = \"\"\"0.1.0-small\"\"\",\n",
     "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
     "    ),\n",
     "    splitter=MARKDOWN_HEADER_SPLITTER\n",
@@ -140,7 +140,7 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "Now we need to write a little bit prompts to generate question and answer for a given paragraph, each promopt data includes a instruction and a list of examples with \"context\", \"question\" and \"answer\". We do this by giving a sample list of `Context` examples to the `GuidedPrompt` class."
+    "Now we need to write a little bit prompts to generate question and answer for a given paragraph, each promopt data includes a instruction and a list of examples with \"\"\"context\"\"\", \"\"\"question\"\"\" and \"\"\"answer\"\"\". We do this by giving a sample list of `Context` examples to the `GuidedPrompt` class."
    ]
   },
   {
@@ -149,14 +149,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last \\\n",
+    "example. Follow the format of the examples below to include context, question, and answer in the response\"\"\"\n",
+    "\n",
+    "context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\"\n",
+    "question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\"\n",
+    "answer=\"\"\"Claude E. Shannon.\"\"\"\n",
+    "\n",
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
-    "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
+    "    instruction=instruction,\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
-    "            context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
-    "            question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
-    "            answer=\"Claude E. Shannon.\",\n",
+    "            context=context,\n",
+    "            question=question,\n",
+    "            answer=answer,\n",
     "        ),\n",
     "        \n",
     "])"
@@ -190,7 +196,7 @@
    ],
    "source": [
     "current_batch_size = 1\n",
-    "print(\"batch size:\", current_batch_size)\n",
+    "print(\"\"\"batch size:\"\"\", current_batch_size)\n",
     "\n",
     "transform_config = TransformHuggingFaceConfig(\n",
     "    prompt_template=guided_prompt,\n",
@@ -348,7 +354,7 @@
     "questions = []\n",
     "answers = []\n",
     "\n",
-    "keywords = [\"context:\", \"question:\", \"answer:\"]\n",
+    "keywords = [\"\"\"context:\"\"\", \"\"\"question:\"\"\", \"\"\"answer:\"\"\"]\n",
     "pattern = '|'.join(map(re.escape, keywords))\n",
     "\n",
     "for item in output[0][3:5]:\n",
