--- a/example/rater/classification.ipynb
+++ b/example/rater/classification.ipynb
@@ -89,15 +89,15 @@
    "outputs": [],
    "source": [
     "raw_input = [\n",
-    "    (\"The Pacific Ocean is the largest and deepest of Earth's oceanic divisions. It extends from the Arctic Ocean in the north to the Southern Ocean in the south.\",\n",
-    "     \"What is the largest ocean on Earth?\",\n",
-    "     \"The largest ocean on Earth is the Pacific Ocean.\"), # correct\n",
-    "    (\"Shakespeare, a renowned English playwright and poet, wrote 39 plays during his lifetime. His works include famous plays like 'Hamlet' and 'Romeo and Juliet'.\",\n",
-    "     \"How many plays did Shakespeare write?\",\n",
-    "     \"Shakespeare wrote 31 plays.\"), # incorrect\n",
-    "    (\"The human brain is an intricate organ responsible for intelligence, memory, and emotions. It is made up of approximately 86 billion neurons.\",\n",
-    "     \"What is the human brain responsible for?\",\n",
-    "     \"The human brain is responsible for physical movement.\"), # incorrect\n",
+    "    (\"\"\"The Pacific Ocean is the largest and deepest of Earth's oceanic divisions. It extends from the Arctic Ocean in the north to the Southern Ocean in the south.\"\"\",\n",
+    "     \"\"\"What is the largest ocean on Earth?\"\"\",\n",
+    "     \"\"\"The largest ocean on Earth is the Pacific Ocean.\"\"\"), # correct\n",
+    "    (\"\"\"Shakespeare, a renowned English playwright and poet, wrote 39 plays during his lifetime. His works include famous plays like 'Hamlet' and 'Romeo and Juliet'.\"\"\",\n",
+    "     \"\"\"How many plays did Shakespeare write?\"\"\",\n",
+    "     \"\"\"Shakespeare wrote 31 plays.\"\"\"), # incorrect\n",
+    "    (\"\"\"The human brain is an intricate organ responsible for intelligence, memory, and emotions. It is made up of approximately 86 billion neurons.\"\"\",\n",
+    "     \"\"\"What is the human brain responsible for?\"\"\",\n",
+    "     \"\"\"The human brain is responsible for physical movement.\"\"\"), # incorrect\n",
     "]\n",
     "\n",
     "data = [\n",
