--- a/example/rater/generated_answer.ipynb
+++ b/example/rater/generated_answer.ipynb
@@ -90,18 +90,18 @@
    "outputs": [],
    "source": [
     "raw_input = [\n",
-    "    (\"Reddit is an American social news aggregation, content rating, and discussion website. Registered users submit content to the site such as links, text posts, images, and videos, which are then voted up or down by other members.\",\n",
-    "     \"What type of content can users submit on Reddit?\",\n",
-    "     \"Users can only post text on Reddit.\",\n",
-    "     \"Users on Reddit can submit various types of content including links, text posts, images, and videos.\"), # Better\n",
-    "    (\"League of Legends (LoL), commonly referred to as League, is a 2009 multiplayer online battle arena video game developed and published by Riot Games. \",\n",
-    "     \"When was League of Legends released?\",\n",
-    "     \"League of Legends was released in 2009.\",\n",
-    "     \"League of Legends was released in the early 2000s.\"), # Worse\n",
-    "    (\"Vitamin C (also known as ascorbic acid and ascorbate) is a water-soluble vitamin found in citrus and other fruits, berries and vegetables, also sold as a dietary supplement and as a topical serum ingredient to treat melasma (dark pigment spots) and wrinkles on the face.\",\n",
-    "     \"Is Vitamin C water-soluble?\",\n",
-    "     \"Yes, Vitamin C is a very water-soluble vitamin.\",\n",
-    "     \"Yes, Vitamin C can be dissolved in water well.\"), # Equally good\n",
+    "    (\"\"\"Reddit is an American social news aggregation, content rating, and discussion website. Registered users submit content to the site such as links, text posts, images, and videos, which are then voted up or down by other members.\"\"\",\n",
+    "     \"\"\"What type of content can users submit on Reddit?\"\"\",\n",
+    "     \"\"\"Users can only post text on Reddit.\"\"\",\n",
+    "     \"\"\"Users on Reddit can submit various types of content including links, text posts, images, and videos.\"\"\"), # Better\n",
+    "    (\"\"\"League of Legends (LoL), commonly referred to as League, is a 2009 multiplayer online battle arena video game developed and published by Riot Games. \"\"\",\n",
+    "     \"\"\"When was League of Legends released?\"\"\",\n",
+    "     \"\"\"League of Legends was released in 2009.\"\"\",\n",
+    "     \"\"\"League of Legends was released in the early 2000s.\"\"\"), # Worse\n",
+    "    (\"\"\"Vitamin C (also known as ascorbic acid and ascorbate) is a water-soluble vitamin found in citrus and other fruits, berries and vegetables, also sold as a dietary supplement and as a topical serum ingredient to treat melasma (dark pigment spots) and wrinkles on the face.\"\"\",\n",
+    "     \"\"\"Is Vitamin C water-soluble?\"\"\",\n",
+    "     \"\"\"Yes, Vitamin C is a very water-soluble vitamin.\"\"\",\n",
+    "     \"\"\"Yes, Vitamin C can be dissolved in water well.\"\"\"), # Equally good\n",
     "]\n",
     "\n",
     "data = [\n",
