--- a/example/transform/huggingface_model.ipynb
+++ b/example/transform/huggingface_model.ipynb
@@ -156,14 +156,14 @@
     "\n",
     "sample_examples = [\n",
     "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy dog.\",\n",
-    "            question=\"What is the color of the fox?\",\n",
-    "            answer=\"brown.\"\n",
+    "            context=\"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
+    "            question=\"\"\"What is the color of the fox?\"\"\",\n",
+    "            answer=\"\"\"brown.\"\"\"\n",
     "        ),\n",
     "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "            question=\"What is the color of the dog?\",\n",
-    "            answer=\"black.\"\n",
+    "            context=\"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
+    "            question=\"\"\"What is the color of the dog?\"\"\",\n",
+    "            answer=\"\"\"black.\"\"\"\n",
     "        )]\n",
     "\n",
     "guided_prompt = PromptTemplate(\n",
