--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +122,14 @@
     "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\",\n",
     "    few_shot_prompt=[\n",
     "            Context(\n",
-    "                context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "                question=\"What is the color of the fox?\",\n",
-    "                answer=\"brown.\",\n",
+    "                context=\"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
+    "                question=\"\"\"What is the color of the fox?\"\"\",\n",
+    "                answer=\"\"\"brown.\"\"\"\n",
     "            ),\n",
     "            Context(\n",
-    "                context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "                question=\"What is the color of the dog?\",\n",
-    "                answer=\"black.\",\n",
+    "                context=\"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
+    "                question=\"\"\"What is the color of the dog?\"\"\",\n",
+    "                answer=\"\"\"black.\"\"\"\n",
     "            ),\n",
     "        ],\n",
     ")"
@@ -149,8 +149,8 @@
    "outputs": [],
    "source": [
     "raw_context_input = [\n",
-    "    \"It was a sunny day and the sky color is blue.\",\n",
-    "    \"My name is bobby and I am a talent software engineer working on AI/ML.\",\n",
+    "    \"\"\"It was a sunny day and the sky color is blue.\"\"\",\n",
+    "    \"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\"\n",
     "]"
    ]
   },
