--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "jupyter_notebook_file = \"model.ipynb\"\n",
+    "jupyter_notebook_file = \"\"\"model.ipynb\"\"\"\n",
     "input_file = os.path.join(f\"{dir_cur}\", jupyter_notebook_file)"
    ]
   },
@@ -301,22 +301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"If there is a code cell, generate one question given the markdown cell and its corresponding \\\n",
+    "    instruction=\"\"\"If there is a code cell, generate one question given the markdown cell and its corresponding \\\n",
     "answer based on code cell and its output. If there is no code cell, generate one question and its corresponding \\\n",
     "answer based on context. Following the format of the examples below to include the same context, question, and \\\n",
-    "answer in the response.\",\n",
+    "answer in the response.\"\"\",\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
-    "            context=\"\"\"'markdown' cell: '['### Use LLM to generate data in Uniflow.\n",
-    "            In this example, we use the base `Config` defaults with the [OpenAIModelConfig] to generate questions and answers.']'\n",
-    "            'code' cell: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\",\n",
-    "            question=\"How to use LLM to generate data in Uniflow\",\n",
-    "            answer=\"We can use the Uniflow's default [OpenAIModelConfig] to generate questions and answers with code: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\",\n",
+    "            context=\"\"\"'markdown' cell: '['### Use LLM to generate data in Uniflow. \\\n",
+    "In this example, we use the base `Config` defaults with the [OpenAIModelConfig] to generate questions and answers.']' \\\n",
+    "'code' cell: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\",\n",
+    "            question=\"\"\"How to use LLM to generate data in Uniflow\"\"\",\n",
+    "            answer=\"\"\"We can use the Uniflow's default [OpenAIModelConfig] to generate questions and answers with code: '['config = Config(model_config=OpenAIModelConfig())', 'client = Client(config)']'\"\"\",\n",
     "        )\n",
     "    ]\n",
     ")"
