--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -94,7 +94,7 @@
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
     "#html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
-    "html_file = \"22.11_information-theory.html\""
+    "html_file = \"\"\"22.11_information-theory.html\"\"\""
    ]
   },
   {
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", html_file)"
+    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", html_file)"
    ]
   },
   {
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "guided_prompt = PromptTemplate(\n",
-    "        instruction=\"Generate one question and its corresponding answer based on context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
+    "        instruction=\"\"\"Generate one question and its corresponding answer based on context. Following the format of the examples below to include the same context, question, and answer in the response.\"\"\",\n",
     "        few_shot_prompt=[\n",
     "            Context(\n",
-    "                context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
-    "                question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
-    "                answer=\"Claude E. Shannon.\",\n",
+    "                context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
+    "                question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
+    "                answer=\"\"\"Claude E. Shannon.\"\"\"\n",
     "            )\n",
     "        ]\n",
     ")\n",
