--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_file = \"makers_schedule_managers_schedule.pdf\""
+    "pdf_file = \"\"\"makers_schedule_managers_schedule.pdf\"\"\""
    ]
   },
   {
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", pdf_file)"
+    "input_file = os.path.join(f\"\"\"{dir_cur}/data/raw_input/\"\"\", pdf_file)"
    ]
   },
   {
@@ -131,12 +131,12 @@
    "outputs": [],
    "source": [
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
+    "    instruction=\"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\"\"\",\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
-    "            context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
-    "            question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
-    "            answer=\"Claude E. Shannon.\"\n",
+    "            context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
+    "            question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
+    "            answer=\"\"\"Claude E. Shannon.\"\"\"\n",
     "        ),\n",
     "    ]\n",
     ")\n",
