--- a/example/llm/sagemaker_deploy_mistral.ipynb
+++ b/example/llm/sagemaker_deploy_mistral.ipynb
@@ -81,14 +81,14 @@
    "outputs": [],
    "source": [
     "session = boto3.Session(profile_name='default')\n",
-    "region = \"us-west-2\"\n",
+    "region = \"\"\"us-west-2\"\"\"\n",
     "account_id = boto3.client('sts').get_caller_identity().get('Account')\n",
-    "datetime_timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
-    "datetime_day = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "datetime_timestamp = datetime.now().strftime(\"\"\"%Y-%m-%d-%H-%M-%S\"\"\")\n",
+    "datetime_day = datetime.now().strftime(\"\"\"%Y-%m-%d\"\"\")\n",
     "\n",
-    "s3_client = session.client(\"s3\", region_name=region)\n",
-    "sm_client = session.client(\"sagemaker\", region_name=region)\n",
-    "sm_runtime_client = session.client(\"sagemaker-runtime\", region_name=region)"
+    "s3_client = session.client(\"\"\"s3\"\"\", region_name=region)\n",
+    "sm_client = session.client(\"\"\"sagemaker\"\"\", region_name=region)\n",
+    "sm_runtime_client = session.client(\"\"\"sagemaker-runtime\"\"\", region_name=region)"
    ]
   },
   {
@@ -117,10 +117,10 @@
     "from huggingface_hub import snapshot_download\n",
     "from pathlib import Path\n",
     "\n",
-    "local_model_path = Path(\"./Mistral_7B_Instruct_model\")\n",
+    "local_model_path = Path(\"\"\"./Mistral_7B_Instruct_model\"\"\")\n",
     "local_model_path.mkdir(exist_ok=True)\n",
-    "model_name = \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
-    "model_commit_hash = \"b70aa86578567ba3301b21c8a27bea4e8f6d6d61\""
+    "model_name = \"\"\"mistralai/Mistral-7B-Instruct-v0.2\"\"\"\n",
+    "model_commit_hash = \"\"\"b70aa86578567ba3301b21c8a27bea4e8f6d6d61\"\"\""
    ]
   },
   {
@@ -182,16 +182,16 @@
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
-    "    all_files_paths = glob.glob(local_model_directory + \"/**/*\", recursive=True)\n",
+    "    all_files_paths = glob.glob(local_model_directory + \"\"\"/**/*\"\"\", recursive=True)\n",
     "\n",
     "    for file_path in all_files_paths:\n",
     "        if Path(file_path).is_dir():\n",
     "            continue\n",
     "\n",
-    "        relative_file_path = file_path.replace(f\"{local_model_directory}/\", \"\")\n",
+    "        relative_file_path = file_path.replace(f\"\"\"{local_model_directory}/\"\"\", \"\"\")\n",
     "        s3_file_path = os.path.join(s3_directory_prefix, str(relative_file_path))\n",
     "\n",
-    "        print(f\"Uploading {file_path} to {s3_file_path}\")\n",
+    "        print(f\"\"\"Uploading {file_path} to {s3_file_path}\"\"\")\n",
     "        s3_client.upload_file(file_path, s3_bucket_name, s3_file_path)"
    ]
   },
@@ -210,11 +210,11 @@
     }
    ],
    "source": [
-    "s3_model_prefix = \"Uniflow/LLM/Mistral_7B_Instruct_model\"  # folder where model checkpoint will go\n",
-    "model_snapshot_path = list(local_model_path.glob(\"**/snapshots/*\"))[0]\n",
-    "s3_code_prefix = \"Uniflow/LLM/Mistral_7B_Instruct_code\"\n",
-    "print(f\"s3_code_prefix: {s3_code_prefix}\")\n",
-    "print(f\"model_snapshot_path: {model_snapshot_path}\")"
+    "s3_model_prefix = \"\"\"Uniflow/LLM/Mistral_7B_Instruct_model\"\"\"  # folder where model checkpoint will go\n",
+    "model_snapshot_path = list(local_model_path.glob(\"\"\"**/snapshots/*\"\"\"))[0]\n",
+    "s3_code_prefix = \"\"\"Uniflow/LLM/Mistral_7B_Instruct_code\"\"\"\n",
+    "print(f\"\"\"s3_code_prefix: {s3_code_prefix}\"\"\")\n",
+    "print(f\"\"\"model_snapshot_path: {model_snapshot_path}\"\"\")"
    ]
   },
   {
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "s3_bucket_name = f\"uniflow-llm-{account_id}-{region}\"\n",
+    "s3_bucket_name = f\"\"\"uniflow-llm-{account_id}-{region}\"\"\"\n",
     "create_s3_bucket(s3_bucket_name)\n",
     "upload_files_to_s3(str(model_snapshot_path), s3_bucket_name, s3_model_prefix)"
    ]
@@ -275,23 +275,23 @@
     "    Returns:\n",
     "    str: The ARN (Amazon Resource Name) of the created IAM role.\n",
     "    \"\"\"\n",
-    "    iam_client = session.client(\"iam\")\n",
+    "    iam_client = session.client(\"\"\"iam\"\"\")\n",
     "\n",
     "    # Check if role already exists\n",
     "    try:\n",
     "        get_role_response = iam_client.get_role(RoleName=role_name)\n",
-    "        print(f\"IAM Role '{role_name}' already exists. Skipping creation.\")\n",
-    "        return get_role_response[\"Role\"][\"Arn\"]\n",
+    "        print(f\"\"\"IAM Role '{role_name}' already exists. Skipping creation.\"\"\")\n",
+    "        return get_role_response[\"\"\"Role\"\"\"][\"\"\"Arn\"\"\"]\n",
     "    except iam_client.exceptions.NoSuchEntityException:\n",
     "        pass\n",
     "\n",
     "    assume_role_policy_document = {\n",
-    "        \"Version\": \"2012-10-17\",\n",
-    "        \"Statement\": [\n",
+    "        \"\"\"Version\"\"\": \"\"\"2012-10-17\"\"\",\n",
+    "        \"\"\"Statement\"\"\": [\n",
     "            {\n",
-    "                \"Effect\": \"Allow\",\n",
-    "                \"Principal\": {\"Service\": \"sagemaker.amazonaws.com\"},\n",
-    "                \"Action\": \"sts:AssumeRole\",\n",
+    "                \"\"\"Effect\"\"\": \"\"\"Allow\"\"\",\n",
+    "                \"\"\"Principal\"\"\": {\"\"\"Service\"\"\": \"\"\"sagemaker.amazonaws.com\"\"\"},\n",
+    "                \"\"\"Action\"\"\": \"\"\"sts:AssumeRole\"\"\",\n",
     "            }\n",
     "        ],\n",
     "    }\n",
@@ -303,17 +303,17 @@
     "\n",
     "    attach_policy_response = iam_client.attach_role_policy(\n",
     "        RoleName=role_name,\n",
-    "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\",\n",
+    "        PolicyArn=\"\"\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\"\"\",\n",
     "    )\n",
     "\n",
     "    attach_policy_response = iam_client.attach_role_policy(\n",
     "        RoleName=role_name,\n",
-    "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\",\n",
+    "        PolicyArn=\"\"\"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\"\",\n",
     "    )\n",
     "\n",
-    "    print(f\"IAM Role '{role_name}' created successfully!\")\n",
+    "    print(f\"\"\"IAM Role '{role_name}' created successfully!\"\"\")\n",
     "\n",
-    "    role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
+    "    role_arn = create_role_response[\"\"\"Role\"\"\"][\"\"\"Arn\"\"\"]\n",
     "\n",
     "    return role_arn"
    ]
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "role_name = f\"UniflowSageMakerEndpointRole-v1\"\n",
+    "role_name = f\"\"\"UniflowSageMakerEndpointRole-v1\"\"\"\n",
     "role_arn = create_role(role_name)"
    ]
   },
@@ -396,14 +396,14 @@
     "import json\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
-    "device = \"cuda\"\n",
+    "device = \"\"\"cuda\"\"\"\n",
     "\n",
     "def load_model(properties):\n",
-    "    tensor_parallel = properties[\"tensor_parallel_degree\"]\n",
+    "    tensor_parallel = properties[\"\"\"tensor_parallel_degree\"\"\"]\n",
     "    model_location = properties['model_dir']\n",
-    "    if \"model_id\" in properties:\n",
+    "    if \"\"\"model_id\"\"\" in properties:\n",
     "        model_location = properties['model_id']\n",
-    "    logging.info(f\"Loading model in {model_location}\")\n",
+    "    logging.info(f\"\"\"Loading model in {model_location}\"\"\")\n",
     "    \n",
     "    tokenizer = AutoTokenizer.from_pretrained(model_location, trust_remote_code=True)\n",
     "    model = AutoModelForCausalLM.from_pretrained(model_location, trust_remote_code=True)\n",
@@ -426,26 +426,26 @@
     "        return None\n",
     "    data = inputs.get_as_json()\n",
     "    \n",
-    "    input_sentence = data[\"inputs\"]\n",
-    "    params = data[\"parameters\"]\n",
-    "    history = data.get(\"history\", [])\n",
-    "    max_new_tokens = params.get(\"max_new_tokens\", 1000)\n",
-    "    do_sample = params.get(\"do_sample\", True)\n",
+    "    input_sentence = data[\"\"\"inputs\"\"\"]\n",
+    "    params = data[\"\"\"parameters\"\"\"]\n",
+    "    history = data.get(\"\"\"history\"\"\", [])\n",
+    "    max_new_tokens = params.get(\"\"\"max_new_tokens\"\"\", 1000)\n",
+    "    do_sample = params.get(\"\"\"do_sample\"\"\", True)\n",
     "\n",
     "    messages = []\n",
     "\n",
-    "    messages.append({\"role\": \"user\", \"content\": input_sentence})\n",
+    "    messages.append({\"\"\"role\"\"\": \"\"\"user\"\"\", \"\"\"content\"\"\": input_sentence})\n",
     "\n",
     "    if history:\n",
     "        messages.extend(history)\n",
     "    \n",
     "    outputs = Output()\n",
     "\n",
-    "    encodeds = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "    encodeds = tokenizer.apply_chat_template(messages, return_tensors=\"\"\"pt\"\"\")\n",
     "    model_inputs = encodeds.to(device)\n",
     "    generated_ids = model.generate(model_inputs, max_new_tokens=max_new_tokens, do_sample=do_sample)\n",
     "    decoded = tokenizer.batch_decode(generated_ids)\n",
-    "    result = {\"outputs\": decoded[0]}\n",
+    "    result = {\"\"\"outputs\"\"\": decoded[0]}\n",
     "\n",
     "    outputs.add_as_json(result)\n",
     "    return outputs\n"
@@ -458,12 +458,12 @@
    "outputs": [],
    "source": [
     "requirements = [\n",
-    "    \"transformers==4.36.2\",\n",
-    "    \"accelerate==0.25.0\"\n",
+    "    \"\"\"transformers==4.36.2\"\"\",\n",
+    "    \"\"\"accelerate==0.25.0\"\"\"\n",
     "]\n",
     "\n",
-    "with open(\"Mistral_7B_Instruct_code/requirements.txt\", \"w\") as f:\n",
-    "    f.write(\"\\n\".join(requirements))"
+    "with open(\"\"\"Mistral_7B_Instruct_code/requirements.txt\"\"\", \"\"\"w\"\"\") as f:\n",
+    "    f.write(\"\"\"\\n\"\"\".join(requirements))"
    ]
   },
   {
@@ -473,13 +473,13 @@
    "outputs": [],
    "source": [
     "serving_properties = [\n",
-    "    \"engine=Python\",\n",
-    "    \"option.tensor_parallel_degree=1\",\n",
-    "    f\"option.s3url=s3://{s3_bucket_name}/Uniflow/LLM/Mistral_7B_Instruct_model/\",\n",
+    "    \"\"\"engine=Python\"\"\",\n",
+    "    \"\"\"option.tensor_parallel_degree=1\"\"\",\n",
+    "    f\"\"\"option.s3url=s3://{s3_bucket_name}/Uniflow/LLM/Mistral_7B_Instruct_model/\"\"\",\n",
     "]\n",
     "\n",
-    "with open(\"Mistral_7B_Instruct_code/serving.properties\", \"w+\") as f:\n",
-    "    f.write(\"\\n\".join(serving_properties))"
+    "with open(\"\"\"Mistral_7B_Instruct_code/serving.properties\"\"\", \"\"\"w+\"\"\") as f:\n",
+    "    f.write(\"\"\"\\n\"\"\".join(serving_properties))"
    ]
   },
   {
@@ -502,7 +502,7 @@
     "!rm model.tar.gz\n",
     "!tar czvf model.tar.gz Mistral_7B_Instruct_code\n",
     "\n",
-    "s3_client.upload_file(\"model.tar.gz\", s3_bucket_name, f\"{s3_code_prefix}/model.tar.gz\")"
+    "s3_client.upload_file(\"\"\"model.tar.gz\"\"\", s3_bucket_name, f\"\"\"{s3_code_prefix}/model.tar.gz\"\"\")"
    ]
   },
   {
@@ -519,24 +519,24 @@
    "outputs": [],
    "source": [
     "\n",
-    "model_name = f\"Mistral-7B-Instruct-{datetime_timestamp}\"\n",
+    "model_name = f\"\"\"Mistral-7B-Instruct-{datetime_timestamp}\"\"\"\n",
     "inference_image_uri = (\n",
-    "    f\"763104351884.dkr.ecr.{region}.amazonaws.com/djl-inference:0.23.0-deepspeed0.9.5-cu118\"\n",
+    "    f\"\"\"763104351884.dkr.ecr.{region}.amazonaws.com/djl-inference:0.23.0-deepspeed0.9.5-cu118\"\"\"\n",
     ")\n",
-    "s3_code_artifact = f\"s3://{s3_bucket_name}/{s3_code_prefix}/model.tar.gz\"\n",
+    "s3_code_artifact = f\"\"\"s3://{s3_bucket_name}/{s3_code_prefix}/model.tar.gz\"\"\"\n",
     "\n",
     "create_model_response = sm_client.create_model(\n",
     "    ModelName=model_name,\n",
     "    ExecutionRoleArn=role_arn,\n",
     "    PrimaryContainer={\n",
-    "        \"Image\": inference_image_uri,\n",
-    "        \"ModelDataUrl\": s3_code_artifact\n",
+    "        \"\"\"Image\"\"\": inference_image_uri,\n",
+    "        \"\"\"ModelDataUrl\"\"\": s3_code_artifact\n",
     "    },\n",
     "    \n",
     ")\n",
-    "model_arn = create_model_response[\"ModelArn\"]\n",
+    "model_arn = create_model_response[\"\"\"ModelArn\"\"\"]\n",
     "\n",
-    "print(f\"Created Model: {model_arn}\")"
+    "print(f\"\"\"Created Model: {model_arn}\"\"\")"
    ]
   },
   {
@@ -552,23 +552,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_config_name = f\"{model_name}-config\"\n",
+    "endpoint_config_name = f\"\"\"{model_name}-config\"\"\"\n",
     "\n",
     "endpoint_config_response = sm_client.create_endpoint_config(\n",
     "    EndpointConfigName=endpoint_config_name,\n",
     "    ProductionVariants=[\n",
     "        {\n",
-    "            \"VariantName\": \"variant1\",\n",
-    "            \"ModelName\": model_name,\n",
-    "            \"InstanceType\": \"ml.g5.4xlarge\",\n",
-    "            \"InitialInstanceCount\": 1,\n",
-    "            # \"VolumeSizeInGB\" : 400,\n",
-    "            # \"ModelDataDownloadTimeoutInSeconds\": 2400,\n",
-    "            \"ContainerStartupHealthCheckTimeoutInSeconds\": 10*60,\n",
+    "            \"\"\"VariantName\"\"\": \"\"\"variant1\"\"\",\n",
+    "            \"\"\"ModelName\"\"\": model_name,\n",
+    "            \"\"\"InstanceType\"\"\": \"\"\"ml.g5.4xlarge\"\"\",\n",
+    "            \"\"\"InitialInstanceCount\"\"\": 1,\n",
+    "            # \"\"\"VolumeSizeInGB\"\"\" : 400,\n",
+    "            # \"\"\"ModelDataDownloadTimeoutInSeconds\"\"\": 2400,\n",
+    "            \"\"\"ContainerStartupHealthCheckTimeoutInSeconds\"\"\": 10*60,\n",
     "        },\n",
     "    ],\n",
     ")\n",
-    "print(f\"Created Endpoint Config: {endpoint_config_response['EndpointConfigArn']}\")"
+    "print(f\"\"\"Created Endpoint Config: {endpoint_config_response['EndpointConfigArn']}\"\"\")"
    ]
   },
   {
@@ -584,12 +584,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_name = f\"{model_name}-endpoint\"\n",
+    "endpoint_name = f\"\"\"{model_name}-endpoint\"\"\"\n",
     "\n",
     "create_endpoint_response = sm_client.create_endpoint(\n",
-    "    EndpointName=f\"{endpoint_name}\", EndpointConfigName=endpoint_config_name\n",
+    "    EndpointName=f\"\"\"{endpoint_name}\"\"\", EndpointConfigName=endpoint_config_name\n",
     ")\n",
-    "print(f\"Created Endpoint: {create_endpoint_response['EndpointArn']}\")"
+    "print(f\"\"\"Created Endpoint: {create_endpoint_response['EndpointArn']}\"\"\")"
    ]
   },
   {
@@ -603,17 +603,17 @@
     "def wait_for_endpoint_creation(sm_client, endpoint_name):\n",
     "    while True:\n",
     "        resp = sm_client.describe_endpoint(EndpointName=endpoint_name)\n",
-    "        status = resp[\"EndpointStatus\"]\n",
+    "        status = resp[\"\"\"EndpointStatus\"\"\"]\n",
     "        \n",
-    "        print(f\"Status: {status}\")\n",
+    "        print(f\"\"\"Status: {status}\"\"\")\n",
     "        \n",
-    "        if status != \"Creating\":\n",
+    "        if status != \"\"\"Creating\"\"\":\n",
     "            break\n",
     "        \n",
     "        time.sleep(60)\n",
     "    \n",
-    "    print(f\"Arn: {resp['EndpointArn']}\")\n",
-    "    print(f\"Status: {status}\")\n",
+    "    print(f\"\"\"Arn: {resp['EndpointArn']}\"\"\")\n",
+    "    print(f\"\"\"Status: {status}\"\"\")\n",
     "\n",
     "wait_for_endpoint_creation(sm_client, endpoint_name)"
    ]
@@ -645,19 +645,19 @@
     "    \"\"\"\n",
     "\n",
     "    parameters = {\n",
-    "        \"do_sample\": True,\n",
-    "        \"max_new_tokens\": 128,\n",
+    "        \"\"\"do_sample\"\"\": True,\n",
+    "        \"\"\"max_new_tokens\"\"\": 128,\n",
     "    }\n",
     "\n",
-    "    prompt = f\"{input_text}\"\n",
+    "    prompt = f\"\"\"{input_text}\"\"\"\n",
     "\n",
-    "    payload = json.dumps({\"inputs\": prompt, \"parameters\": parameters})\n",
+    "    payload = json.dumps({\"\"\"inputs\"\"\": prompt, \"\"\"parameters\"\"\": parameters})\n",
     "\n",
     "    response = sm_runtime_client.invoke_endpoint(\n",
-    "        EndpointName=endpoint_name, ContentType=\"application/json\", Body=payload\n",
+    "        EndpointName=endpoint_name, ContentType=\"\"\"application/json\"\"\", Body=payload\n",
     "    )\n",
     "\n",
-    "    return json.loads(response[\"Body\"].read().decode(\"utf-8\"))"
+    "    return json.loads(response[\"\"\"Body\"\"\"].read().decode(\"\"\"utf-8\"\"\"))"
    ]
   },
   {
@@ -674,7 +674,7 @@
     }
    ],
    "source": [
-    "input_text = \"Tell me about Amazon SageMaker\"\n",
+    "input_text = \"\"\"Tell me about Amazon SageMaker\"\"\"\n",
     "response = invoke_endpoint(endpoint_name, input_text)\n",
     "print(response)"
    ]
@@ -703,7 +703,7 @@
     "\n",
     "<a href=\"https://www.cambioml.com/\" title=\"Title\">\n",
     "    <img src=\"../image/cambioml_logo_large.png\" style=\"height: 100px; display: block; margin-left: auto; margin-right: auto;\"/>\n",
-    "</a>\n"
+    "</a>"
    ]
   }
  ],
