--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -139,13 +139,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last \\\n",
+    "example. Follow the format of the examples below to include context, question, and answer in the response\"\"\"\n",
+    "\n",
+    "context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\"\n",
+    "question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\"\n",
+    "answer=\"\"\"Claude E. Shannon.\"\"\"\n",
+    "\n",
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
-    "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
+    "    instruction=instruction,\n",
     "    few_shot_prompt=[Context(\n",
-    "        context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
-    "        question=\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
-    "        answer=\"Claude E. Shannon.\"\"\"\n",
+    "        context=context,\n",
+    "        question=question,\n",
+    "        answer=answer\n",
     "    )]\n",
     ")\n"
    ]
