--- a/example/transform/huggingface_model_neuron.ipynb
+++ b/example/transform/huggingface_model_neuron.ipynb
@@ -149,14 +149,14 @@
     "\n",
     "sample_examples = [\n",
     "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy dog.\",\n",
-    "            question=\"What is the color of the fox?\",\n",
-    "            answer=\"brown.\"\n",
+    "            context=\"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
+    "            question=\"\"\"What is the color of the fox?\"\"\",\n",
+    "            answer=\"\"\"brown.\"\"\"\n",
     "        ),\n",
     "        Context(\n",
-    "            context=\"The quick brown fox jumps over the lazy black dog.\",\n",
-    "            question=\"What is the color of the dog?\",\n",
-    "            answer=\"black.\"\n",
+    "            context=\"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
+    "            question=\"\"\"What is the color of the dog?\"\"\",\n",
+    "            answer=\"\"\"black.\"\"\"\n",
     "        )]\n",
     "\n",
     "guided_prompt = PromptTemplate(\n",
@@ -243,7 +243,6 @@
     }
    ],
    "source": [
-    "\n",
     "input_data = [\n",
     "    Context(context=data)\n",
     "    for data in raw_context_input_400\n",
