--- a/example/transform/lmqg_model.ipynb
+++ b/example/transform/lmqg_model.ipynb
@@ -271,10 +271,10 @@
    "outputs": [],
    "source": [
     "raw_context_input = [\n",
-    "    \"\"\"William Turner was an English painter who specialised in watercolour landscapes. He is often known\n",
-    "          \"as William Turner of Oxford or just Turner of Oxford to distinguish him from his contemporary,\n",
-    "          \"J. M. W. Turner. Many of Turner's paintings depicted the countryside around Oxford. One of his\n",
-    "          \"best known pictures is a view of the city of Oxford from Hinksey Hill.\"\"\",\n",
+    "    \"\"\"William Turner was an English painter who specialised in watercolour landscapes. He is often known \\\n",
+    "as William Turner of Oxford or just Turner of Oxford to distinguish him from his contemporary, \\\n",
+    "J. M. W. Turner. Many of Turner's paintings depicted the countryside around Oxford. One of his \\\n",
+    "best known pictures is a view of the city of Oxford from Hinksey Hill.\"\"\",\n",
     "    \"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\"\n",
     "]"
    ]
