--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_file = \"nike-10k-2023.pdf\""
+    "pdf_file = \"\"\"nike-10k-2023.pdf\"\"\""
    ]
   },
   {
@@ -216,13 +216,13 @@
    "outputs": [],
    "source": [
     "guided_prompt = PromptTemplate(\n",
-    "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last\n",
-    "    example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
+    "    instruction=\"\"\"Generate one question and its corresponding answer based on the last context in the last \\\n",
+    "example. Follow the format of the examples below to include context, question, and answer in the response\"\"\",\n",
     "    few_shot_prompt=[\n",
     "        Context(\n",
-    "            context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
-    "            question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
-    "            answer=\"Claude E. Shannon.\",\n",
+    "            context=\"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
+    "            question=\"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
+    "            answer=\"\"\"Claude E. Shannon.\"\"\",\n",
     "        ),\n",
     "])"
    ]
