--- a/example/extract/extract_txt_from_s3.ipynb
+++ b/example/extract/extract_txt_from_s3.ipynb
@@ -94,18 +94,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: AWS_ACCESS_KEY_ID=AKIAYKCELRQZJVMATYNO\n",
-      "env: AWS_SECRET_ACCESS_KEY=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\n",
+      "env: AWS_ACCESS_KEY_ID=a\n",
+      "env: AWS_SECRET_ACCESS_KEY=b\n",
       "env: AWS_REGION=us-west-2\n",
-      "aws access key id is AKIAYKCELRQZJVMATYNO)\n",
-      "aws secret access key is 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\n",
+      "aws access key id is a\n",
+      "aws secret access key is b\n",
       "aws region is us-west-2\n"
      ]
     }
    ],
    "source": [
-    "%env AWS_ACCESS_KEY_ID=AKIAYKCELRQZJVMATYNO\n",
-    "%env AWS_SECRET_ACCESS_KEY=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\n",
+    "%env AWS_ACCESS_KEY_ID=a\n",
+    "%env AWS_SECRET_ACCESS_KEY=b\n",
     "%env AWS_REGION=us-west-2\n",
     "\n",
     "print(f\"aws access key id is {os.environ.get('AWS_ACCESS_KEY_ID')})\")\n",
